--- a/firefox/kiseppe.css
+++ b/firefox/kiseppe.css
@@ -36,11 +36,9 @@
     line-height: 1.2em;
     text-align: center;
     font-size: x-small;
-    /* background-color: rgba(165,42,42,0.9); brown */
     background-color: rgba(255,0,0,0.9); /* brown */
     color: white;
-
-    animation: araware 1.5s;
+    /* animation: araware 1.5s; */
 }
 .kiseppe-series-sale-badge {
     animation-name: araware;
@@ -55,8 +53,7 @@
     cursor: pointer;
     font-size: 1em;
     color: rgba(0,0,0,0.9);
-
-    animation: zoomin_bottom_left 1.5s;
+    /* animation: zoomin_bottom_left 1.5s; */
 }
 
 /*
