--- a/chrome/kiseppe.css
+++ b/chrome/kiseppe.css
@@ -62,9 +62,12 @@ dialog#popup_modal::backdrop {
 }
 #popup_modal #pg_container {
     width: 850px;
-    text-align: center; }
+    max-width: 100%;
+    min-width: 90%;
+    text-align: center;
+}
 #popup_modal #pg_container .pg_item_info {
-    height: 400px;
+    max-height: 100%;
 }
 #popup_modal #pg_container .pg_item_title {
     font-weight: bold;
