--- a/firefox/kiseppe.css
+++ b/firefox/kiseppe.css
@@ -34,6 +34,7 @@
     /* animation: araware 1.5s; */
 }
 .kiseppe-series-sale-badge {
+    color: red; /* only for Windows Chrome */
     animation-name: araware;
     animation-duration: 0.7s;
     animation-iteration-count: 3;
@@ -61,9 +62,12 @@ dialog#popup_modal::backdrop {
 }
 #popup_modal #pg_container {
     width: 850px;
-    text-align: center; }
+    max-width: 100%;
+    min-width: 90%;
+    text-align: center;
+}
 #popup_modal #pg_container .pg_item_info {
-    height: 400px;
+    max-height: 100%;
 }
 #popup_modal #pg_container .pg_item_title {
     font-weight: bold;
